fixed whitespace on bottom of home page.

--- a/AppBuilder9000/Books/static/Books/css/Books.css
+++ b/AppBuilder9000/Books/static/Books/css/Books.css
@@ -15,6 +15,10 @@ body {
     background-position: left;
 }
 
+html {
+    min-height: 100%;
+    overflow-y: scroll;
+}
 .navbar {
     width: 100%;
     background-color: rgba(0,0,0,0.6);
